# CraneVM

./: Cargo.toml  test.cb  test.rs
asm/: main.rs
benches/: my_bench.rs
src/: lib.rs  main.rs
src/engine/: engine.rs  memory.rs  mod.rs
src/reader/: mod.rs
src/structs/: mod.rs
src/writer/: mod.rs
