[package]
name = "cranevm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5.1"
[[bench]]
name = "my_bench"
harness = false

[[bin]]
name = "craneasm"
path = "asm/main.rs"

[[bin]]
name = "bench"
path = "benches/my_bench.rs"
[dependencies]
criterion="0.5.1"
